--- a/test1.css
+++ b/test1.css
@@ -1,9 +1,113 @@
-div{
+body{
+	background-color: white;
+	font-family: "Avenir Next";
+	margin: 0;
+	padding: 0;
+}
+
+#nav{
+	width: 100%;
+	height: 121px;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	border-bottom-color: #f2f2f2;
+	line-height: 120px;
+}
+
+#navContainer{
+	max-width: 1400px;
+	height: 120px;
+	margin: 0 auto;
+	padding: 0 30px;
+}
+
+#logo{
+	font-size: 50px;
+	font-weight: 700;
+	color: #0099FF;
+	margin: 0;
+}
+
+#formContainer{
+	width: 700px;
+	height: 366px;
+	margin: auto;
+  	position: absolute;
+  	top: 0; left: 0; bottom: 0; right: 0;
+  	padding: 0 30px;
+}
+
+#formTitle{
+	font-weight: 700;
+	font-size: 60px;
+	color: #303030;
+}
+
+#inputFields{
+	text-align: center;
+}
+
+input{
+	height: 40px;
+	width: 500px;
+	margin: 8px;
+	border-radius: 12px;
+	border-style: solid;
+	border-color: #e0dede;
+	border-width: 6px;
+	padding: 9px 17px;
+	font-size: 24px;
+	font-weight: 600;
+	color: #303030;
+	letter-spacing: 1.3px;
+}
+
+input:focus{
+	border-color: #0099FF;
+	outline: 0;
+}
+
+input::-webkit-input-placeholder {
+	font-family: "Avenir Next";
+	font-size: 22px;
+	font-weight: 500;
+	margin-top: 15px;
+	color: #e0dede;
+	letter-spacing: 1.3px;
+}
+
+#search{
+	width: 200px;
+	height: 60px;
+	margin-top: 30px;
+	border-radius: 30px;
+	background-color: #0099FF;
+	font-weight: 700;
+	font-size: 25px;
+	color: white;
+	border-style: none;
+	letter-spacing: 1.8px;
+	outline: 0;
+}
+
+#search:active{
+	background-color: rgba(0, 153, 255, 0.6)
+}
+
+#recipeContainer{
+	padding-top: calc(100vh - 121px);
+	margin: 0 auto;
+	max-width: 1400px;
+
+}
+
+div[id^="recipeDiv"]{
 	margin: 20px;
 	float: left;
 	background-color: blue;
 	height: 300px;
 	width: 300px;
+
 }
 
 img{
@@ -11,6 +115,16 @@ img{
 	width: 300px;
 }
 
-span{
+[id^="nameSpan"] {
+	background-color: green;
 	display: block;
+	height: 36px;
+	font-weight: bold;
+	font-size: 20px;
+	border-radius: inherit;
 }
+
+[id^="recipeDiv"] {
+	border-radius: 5px;
+}
+
