--- a/index.css
+++ b/index.css
@@ -27,11 +27,15 @@ body{
 	color: #0099FF;
 	margin: 0;
 	display: inline;
+	cursor: pointer;
 }
 
 #logoImg{
 	height: 50px;
-	display: inline;
+	position: absolute;
+	top: 33px;
+	margin-left: 15px;
+	cursor: pointer;
 }
 
 #formContainer{
@@ -42,6 +46,7 @@ body{
   	top: 0; left: 0; bottom: 0; right: 0;
   	padding: 0 30px;
   	z-index: 1;
+  	cursor: pointer;
 }
 
 #formTitle{
@@ -54,7 +59,7 @@ body{
 	text-align: center;
 }
 
-input{
+.input{
 	height: 40px;
 	width: 500px;
 	margin: 8px;
@@ -67,6 +72,7 @@ input{
 	font-weight: 600;
 	color: #303030;
 	letter-spacing: 1.3px;
+	position: sticky;
 }
 
 input:focus{
@@ -102,10 +108,11 @@ input::-webkit-input-placeholder {
 }
 
 .recipeWrapper{
-	padding-top: calc(100vh - 121px);
+	top: calc(100vh - 121px);
 	margin: 0 auto;
 	max-width: 1360px;
 	z-index: 0;
+	position: absolute;
 }
 
 .recipeContainer{
@@ -125,7 +132,7 @@ input::-webkit-input-placeholder {
 }
 
 .recipeBlock:hover{
-	border-color: rgba(0, 153, 255, 0.4);
+	border-color: #3077e8;
 }
 
 .img{
