--- a/recipePage.css
+++ b/recipePage.css
@@ -6,7 +6,7 @@ body{
 	counter-reset: item;
 }
 
-#nav{
+nav{
 	width: 100%;
 	height: 121px;
 	border-bottom-style: solid;
@@ -100,28 +100,27 @@ a{
 	text-decoration: none;
 }
 
-ol{
-   list-style: none;
+ol {
+  margin-left: 30px;
+  padding: 0;
+  counter-reset: item;
 }
 
- ol li{
- 	counter-increment: item;
-   	margin-bottom: 10px;
-   	list-style-position: inside;
-	text-indent: 0.5em;
-    margin-left: -0.5em;
+ol > li {
+  margin: 0;
+  padding: 0 0 0 2em;
+  text-indent: -2em;
+  list-style-type: none;
+  counter-increment: item;
 }
 
-li::before{
-   margin-right: 10px;
-   content: counter(item);
-   background: #0099FF;
-   border-radius: 100%;
-   font-size: 20px;
-   color: white;
-   width: 1.4em;
-   height: 1.4em;
-   text-align: center;
-   display: inline-block;
-   list-style-type: disc;
+ol > li:before {
+  display: inline-block;
+  width: 1em;
+  color: #0099FF;
+  font-size: 20px; 
+  padding-right: 0.5em;
+  font-weight: bold;
+  text-align: right;
+  content: counter(item) ".";
 }
