--- a/index.css
+++ b/index.css
@@ -5,6 +5,12 @@ body{
 	padding: 0;
 }
 
+/*.top{
+	height: 100vh;
+	background-image: url('bg.jpeg');
+	background-size: cover;
+}*/
+
 nav{
 	width: 100%;
 	height: 121px;
@@ -125,15 +131,11 @@ input::-webkit-input-placeholder {
 	border-color: : #0099FF;
 	border-width: 5px;
 	box-sizing: border-box;
-	width: 20%;
+	width: 300px;
 	border-radius: 5px;
 	color: #0099FF;
 	border-style: solid;
 	transition: border-color 0.2s ease;
-}
-
-.recipeBlock:hover{
-	border-color: #3077e8;
 }
 
 .img{
@@ -148,6 +150,10 @@ input::-webkit-input-placeholder {
 	font-weight: bold;
 	font-size: 20px;
 	padding: 10px;
+}
+
+.changeColor{
+	background-color: red;
 }
 
 .ingredientsMissing{
