--- a/index.css
+++ b/index.css
@@ -1,27 +1,24 @@
 body{
-	background-color: white;
+	background-color: #ededea;
 	font-family: "Avenir Next";
 	margin: 0;
 	padding: 0;
 }
 
-/*.top{
+.top{
 	height: 100vh;
-	background-image: url('bg.jpeg');
+	background-image: url('bg1.jpg');
 	background-size: cover;
-}*/
+}
 
 nav{
 	width: 100%;
 	height: 121px;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-	border-bottom-color: #f2f2f2;
 	line-height: 120px;
 }
 
 #navContainer{
-	max-width: 1200px;
+	max-width: 1500px;
 	height: 120px;
 	margin: 0 auto;
 	padding: 0 30px;
@@ -30,10 +27,11 @@ nav{
 #logo{
 	font-size: 50px;
 	font-weight: 700;
-	color: #0099FF;
+	color: #292f33;
 	margin: 0;
 	display: block;
 	text-decoration: none;
+	font-family: Pacifico;
 }
 
 #logoImg{
@@ -58,7 +56,7 @@ nav{
 #formTitle{
 	font-weight: 700;
 	font-size: 60px;
-	color: #303030;
+	color: #c1b17d;
 }
 
 #inputFields{
@@ -69,20 +67,21 @@ nav{
 	height: 40px;
 	width: 500px;
 	margin: 8px;
-	border-radius: 12px;
-	border-style: solid;
-	border-color: #e0dede;
-	border-width: 6px;
 	padding: 9px 17px;
 	font-size: 24px;
 	font-weight: 600;
 	color: #303030;
 	letter-spacing: 1.3px;
-	position: sticky;
+	background: transparent;
+	border: 0;
+	border-bottom-style: solid;
+	border-bottom-width: 2px;
+	border-bottom-color: #303030;
+  	outline: 0;
 }
 
 input:focus{
-	border-color: #0099FF;
+	border-color: #c1b17d;
 	outline: 0;
 }
 
@@ -100,7 +99,7 @@ input::-webkit-input-placeholder {
 	height: 60px;
 	margin-top: 30px;
 	border-radius: 30px;
-	background-color: #0099FF;
+	background-color: #292f33;
 	font-weight: 700;
 	font-size: 25px;
 	color: white;
@@ -110,11 +109,11 @@ input::-webkit-input-placeholder {
 }
 
 #search:active{
-	background-color: rgba(0, 153, 255, 0.6)
+	background-color: rgba(41, 47, 51, 0.6);
 }
 
 .recipeWrapper{
-	top: calc(100vh - 121px);
+	/*top: calc(100vh - 121px);*/
 	margin: 0 auto;
 	max-width: 80%;
 	z-index: 0;
@@ -128,12 +127,12 @@ input::-webkit-input-placeholder {
 
 .recipeBlock{
 	margin: 15px;
-	border-color: : #0099FF;
+	border-color: : #c1b17d;
 	border-width: 5px;
 	box-sizing: border-box;
 	width: 300px;
 	border-radius: 5px;
-	color: #0099FF;
+	color: #292f33;
 	border-style: solid;
 	transition: border-color 0.2s ease;
 }
@@ -146,7 +145,7 @@ input::-webkit-input-placeholder {
 .name{
 	display: block;
 	color: white;
-	background-color: #0099FF;
+	background-color: #292f33;
 	font-weight: bold;
 	font-size: 20px;
 	padding: 10px;
