--- a/recipePage.css
+++ b/recipePage.css
@@ -1,5 +1,5 @@
 body{
-	background-color: white;
+	background-color: #f4f4f4;
 	font-family: "Avenir Next";
 	margin: 0;
 	padding: 0;
@@ -9,26 +9,25 @@ body{
 nav{
 	width: 100%;
 	height: 121px;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-	border-bottom-color: #f2f2f2;
 	line-height: 120px;
 }
 
 #navContainer{
-	max-width: 1200px;
+	max-width: 1500px;
 	height: 120px;
 	margin: 0 auto;
 	padding: 0 30px;
 }
 
 #logo{
-	font-size: 50px;
+	font-size: 60px;
 	font-weight: 700;
 	color: #0099FF;
 	margin: 0;
 	display: block;
 	text-decoration: none;
+	color: #292f33;
+	font-family: Pacifico;
 }
 
 #logoImg{
@@ -111,6 +110,7 @@ nav{
 
 a{
 	text-decoration: none;
+	color: #c1b17d;
 }
 
 ol {
@@ -120,7 +120,7 @@ ol {
 }
 
 ol > li {
-  margin: 0;
+  margin-bottom: 10px;
   padding: 0 0 0 2em;
   text-indent: -2em;
   list-style-type: none;
@@ -131,7 +131,7 @@ ol > li {
 ol > li:before {
   display: inline-block;
   width: 1em;
-  color: #0099FF;
+  color: #c1b17d;
   font-size: 20px; 
   padding-right: 0.5em;
   font-weight: bold;
