--- a/index.css
+++ b/index.css
@@ -82,7 +82,7 @@ nav{
 	font-size: 22px;
 	font-weight: 500;
 	margin-top: 15px;
-	color: #e0dede;
+	color: #292f33;
 	letter-spacing: 1.3px;
 }
 
@@ -98,7 +98,7 @@ nav{
 	font-size: 25px;
 	letter-spacing: 1.8px;
 	outline: 0;
-	transition: background 0.5s ease;
+	transition: background 0.5s;
 }
 
 #search:hover{
